# riptide_wtf

./: CMakeLists.txt  package.xml
include/riptide_wtf/: wtf_node.hpp
scripts/: Window.py  quaternion_to_euler.py  riptide_wtf.py
src/: wtf_node.cpp
